--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -29,14 +29,15 @@
     <div id="computerScore"></div>
 
 
-    <div id ="rockDecision"></div>
-        <input type="image" src="" name="rockButton" class="imageButton" id="rockButton"/>
+    <div id ="rockDecision">
+        <input type="image" name="rockButton" class="imageButton" id="rockButton" img src="/Images/rock.png"/>
+    </div>
 
     <div id ="paperDecision"></div>
-        <input type="image" src="" name="paperButton" class="imageButton" id="paperButton"/>
+        <input type="image" name="paperButton" class="imageButton" id="paperButton" img src="/Images/paper.png"/>
 
     <div id ="scissorsDecision"></div>
-        <input type="image" src="" name="scissorsButton" class="imageButton" id="scissorsButton"/>
+        <input type="image" name="scissorsButton" class="imageButton" id="scissorsButton" img src="/Images/scissors.png"/>
 
 
  
