more style changes
added another image, messed around with the css, almost happy, need to change text positoning and add smiley face

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -25,13 +25,22 @@
 
 <body>
     <div class="outputContainer">
-        <div id="playerDecisionOutput"></div>
-        <div id="computerDecisionOutput"></div>
+        <div class="playerDecisionOutput">
+            <div class="playerImageOutput"></div>
+            <div class="playerScoreOutput">
+                <p class="playerScoreOutputText">you</p>
+            </div>
+        </div>
+
+        <div class="computerDecisionOutput">
+            <div class="computerImageOutput"></div>
+            <div class="computerScoreOutput">
+                <p class ="computerScoreOutputText">not you</p>
+            </div>
+        </div>
     </div>
 
-    <div id="playerScore"></div>
-
-    <div id="computerScore"></div>
+  
 
 
     <div class="buttonContainer">
