CSS finished (for now)
CSS finished for now, moving to JS

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -38,6 +38,8 @@
                 <p class ="computerScoreOutputText">not you</p>
             </div>
         </div>
+
+        <div class="face"></div>
     </div>
 
   
