fixed image output
fixed computer and player image outputs

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -26,14 +26,14 @@
 <body>
     <div class="outputContainer">
         <div class="playerDecisionOutput">
-            <div id="playerImageOutput"class="playerImageOutput"></div>
+            <div id="playerImageOutput" class="playerImageOutput"></div>
             <div class="playerNameOutput">
                 <p class="playerNameOutputText">you</p>
             </div>
         </div>
 
         <div class="computerDecisionOutput">
-            <div id="computerImageOutput" class="computerImageOutput"></div>
+            <div id="computerImageOutput" class="computerImageOutputBlank"></div>
             <div class="computerNameOutput">
                 <p class ="computerNameOutputText">not you</p>
             </div>
