added smile functionality
almost everything done except alerts

--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -23,7 +23,7 @@
 
 </header>
 
-<body>
+<body >
     <div class="outputContainer">
         <div class="playerDecisionOutput">
             <div id="playerImageOutput" class="playerImageOutput"></div>
@@ -39,14 +39,14 @@
             </div>
         </div>
 
-        <div class="face"></div>
+        <div class="face" id="face"></div>
 
         <div class="playerScoreOutput">
-            <p class="playerScoreOutputText">0</p>
+            <p class="playerScoreOutputText" id="playerScoreOutputText"></p>
         </div>
 
         <div class="computerScoreOutput">
-            <p class="computerScoreOutputText">0</p>
+            <p class="computerScoreOutputText" id="computerScoreOutputText"></p>
         </div>
     </div>
 
