--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
     <div id="buttonContainer">
         <div id ="rockDecision">
-            <input type="image" name="rockButton" class="imageButton" id="rockButton" img src="/images/rock.png"/>
+            <input type="image" name="rockButton" class="imageButton" id="rockButton" img src="/rock_paper_scissors/images/rock.png"/>
         </div>
         <div id ="paperDecision">
-            <input type="image" name="paperButton" class="imageButton" id="paperButton" img src="/images/paper.png"/>
+            <input type="image" name="paperButton" class="imageButton" id="paperButton" img src="/rock_paper_scissors/images/paper.png"/>
         </div>
         <div id ="scissorsDecision">
-            <input type="image" name="scissorsButton" class="imageButton" id="scissorsButton" img src="/images/scissors.png"/>
+            <input type="image" name="scissorsButton" class="imageButton" id="scissorsButton" img src="/rock_paper_scissors/images/scissors.png"/>
         </div>
     </div>
  
